[gd_scene load_steps=4 format=3 uid="uid://bw6wr4q21wgbt"]

[ext_resource type="PackedScene" uid="uid://buwsflnumlaxh" path="res://ui/input_settings.tscn" id="1_7kwmf"]
[ext_resource type="Script" uid="uid://b6n2pjechak67" path="res://ui/settings.gd" id="1_feasd"]
[ext_resource type="PackedScene" uid="uid://bv7uamh0wlsfa" path="res://ui/audio_settings.tscn" id="2_pcnwc"]

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_feasd")

[node name="TabContainer" type="TabContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
current_tab = 4
clip_tabs = false

[node name="Controls" type="Button" parent="TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 0

[node name="InputSettings" parent="TabContainer/Controls" instance=ExtResource("1_7kwmf")]
layout_mode = 0
offset_top = 35.0
offset_right = 247.0
offset_bottom = 35.0

[node name="Audio" type="Button" parent="TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="AudioSettings" parent="TabContainer/Audio" instance=ExtResource("2_pcnwc")]
layout_mode = 1

[node name="Colorblindness" type="Button" parent="TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 2

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Colorblindness"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="HighContrast" type="CheckButton" parent="TabContainer/Colorblindness/VBoxContainer"]
layout_mode = 2
text = "High contrast"

[node name="Texts" type="Button" parent="TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 3

[node name="Gameplay" type="Button" parent="TabContainer"]
layout_mode = 2
metadata/_tab_index = 4

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Gameplay"]
layout_mode = 1
offset_right = 247.0
offset_bottom = 74.0

[node name="CheckButton" type="CheckButton" parent="TabContainer/Gameplay/VBoxContainer"]
layout_mode = 2
text = "One button mode"

[node name="TabContainer" type="TabContainer" parent="TabContainer/Gameplay/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10
current_tab = 1
clip_tabs = false

[node name="Act one" type="Button" parent="TabContainer/Gameplay/VBoxContainer/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 0

[node name="PlayerSpeed" type="Label" parent="TabContainer/Gameplay/VBoxContainer/TabContainer/Act one"]
layout_mode = 0
offset_top = 16.0
offset_right = 187.0
offset_bottom = 39.0
text = "Player movement speed"

[node name="PlayerSpeedSlider" type="HSlider" parent="TabContainer/Gameplay/VBoxContainer/TabContainer/Act one"]
layout_mode = 0
offset_left = 214.0
offset_top = 18.0
offset_right = 1109.0
offset_bottom = 34.0
min_value = 100.0
max_value = 1000.0
value = 500.0

[node name="PlayerRotationSpeed" type="Label" parent="TabContainer/Gameplay/VBoxContainer/TabContainer/Act one"]
layout_mode = 0
offset_left = 1.0
offset_top = 58.0
offset_right = 167.0
offset_bottom = 81.0
text = "Player rotation speed"

[node name="PlayerRotationSpeedSlider" type="HSlider" parent="TabContainer/Gameplay/VBoxContainer/TabContainer/Act one"]
layout_mode = 0
offset_left = 212.0
offset_top = 62.0
offset_right = 1105.0
offset_bottom = 78.0
min_value = 1.0
max_value = 20.0
step = 0.1
value = 5.0

[node name="Act two" type="Button" parent="TabContainer/Gameplay/VBoxContainer/TabContainer"]
layout_mode = 2
metadata/_tab_index = 1

[node name="PlayerSpeed" type="Label" parent="TabContainer/Gameplay/VBoxContainer/TabContainer/Act two"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "Player speed"

[node name="Act tree" type="Button" parent="TabContainer/Gameplay/VBoxContainer/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 2

[connection signal="toggled" from="TabContainer/Colorblindness/VBoxContainer/HighContrast" to="." method="_on_high_contrast_toggled"]
[connection signal="value_changed" from="TabContainer/Gameplay/VBoxContainer/TabContainer/Act one/PlayerSpeedSlider" to="." method="_on_player_speed_slider_value_changed"]
[connection signal="value_changed" from="TabContainer/Gameplay/VBoxContainer/TabContainer/Act one/PlayerRotationSpeedSlider" to="." method="_on_player_rotation_speed_slider_value_changed"]
